--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "playwright-msteams-reporter",
-  "version": "0.0.12",
+  "name": "playwright-msteams-reporter-conditional",
+  "version": "0.0.14",
   "description": "Microsoft Teams reporter for Playwright which allows you to send notifications about the status of your E2E tests.",
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
-    "test": "NODE_ENV=development npx playwright test",
+    "test": "npx playwright test --project  setup__jenkins",
     "test:jest": "jest --coverage --coverageDirectory=../coverage"
   },
   "repository": {
@@ -36,6 +36,7 @@
     "@tsconfig/recommended": "^1.0.7",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.14.9",
+    "@types/node-fetch": "^2.6.11",
     "dotenv": "^16.4.5",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.5",
@@ -43,5 +44,9 @@
   },
   "peerDependencies": {
     "@playwright/test": "^1.45.0"
+  },
+  "dependencies": {
+    "https-proxy-agent": "^7.0.5",
+    "node-fetch": "^2.6.6"
   }
 }
